Dowloaded data and imported to notebook

--- a/Presentable Notes.ipynb
+++ b/Presentable Notes.ipynb
@@ -2,36 +2,321 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "51e43114-e66b-4926-85fe-c0f0c4af9afa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3089723f-9177-4fcb-b231-699bbe7c189a",
+   "execution_count": 17,
+   "id": "6a2d4dbc-fdd0-4051-9368-e20a3e1f1476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0293cef7-d9c5-4684-8f1a-58df8b729f13",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['.git',\n",
+       " '.gitignore',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'data',\n",
+       " 'Presentable Notes.ipynb',\n",
+       " 'README.md']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(2 + 3)"
+    "os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "16b70446-b289-4699-bdff-c48d530848fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['taxi_zone_lookup.csv', 'yellow_tripdata_2025-01.parquet']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir('data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ae80b530-2910-4ad1-a17e-bdae8944ffdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "taxi_df = pd.read_parquet('data/yellow_tripdata_2025-01.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "050272f5-b2ac-4e14-8bae-759438b51446",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VendorID</th>\n",
+       "      <th>tpep_pickup_datetime</th>\n",
+       "      <th>tpep_dropoff_datetime</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>RatecodeID</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "      <th>PULocationID</th>\n",
+       "      <th>DOLocationID</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>extra</th>\n",
+       "      <th>mta_tax</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>improvement_surcharge</th>\n",
+       "      <th>total_amount</th>\n",
+       "      <th>congestion_surcharge</th>\n",
+       "      <th>Airport_fee</th>\n",
+       "      <th>cbd_congestion_fee</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2025-01-01 00:18:38</td>\n",
+       "      <td>2025-01-01 00:26:59</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.60</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>229</td>\n",
+       "      <td>237</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.00</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2025-01-01 00:32:40</td>\n",
+       "      <td>2025-01-01 00:35:13</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>236</td>\n",
+       "      <td>237</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.02</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>12.12</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2025-01-01 00:44:04</td>\n",
+       "      <td>2025-01-01 00:46:01</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>141</td>\n",
+       "      <td>141</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>12.10</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2025-01-01 00:14:27</td>\n",
+       "      <td>2025-01-01 00:20:01</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>244</td>\n",
+       "      <td>244</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.70</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2025-01-01 00:21:34</td>\n",
+       "      <td>2025-01-01 00:25:06</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>244</td>\n",
+       "      <td>116</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.30</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   VendorID tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\n",
+       "0         1  2025-01-01 00:18:38   2025-01-01 00:26:59              1.0   \n",
+       "1         1  2025-01-01 00:32:40   2025-01-01 00:35:13              1.0   \n",
+       "2         1  2025-01-01 00:44:04   2025-01-01 00:46:01              1.0   \n",
+       "3         2  2025-01-01 00:14:27   2025-01-01 00:20:01              3.0   \n",
+       "4         2  2025-01-01 00:21:34   2025-01-01 00:25:06              3.0   \n",
+       "\n",
+       "   trip_distance  RatecodeID store_and_fwd_flag  PULocationID  DOLocationID  \\\n",
+       "0           1.60         1.0                  N           229           237   \n",
+       "1           0.50         1.0                  N           236           237   \n",
+       "2           0.60         1.0                  N           141           141   \n",
+       "3           0.52         1.0                  N           244           244   \n",
+       "4           0.66         1.0                  N           244           116   \n",
+       "\n",
+       "   payment_type  fare_amount  extra  mta_tax  tip_amount  tolls_amount  \\\n",
+       "0             1         10.0    3.5      0.5        3.00           0.0   \n",
+       "1             1          5.1    3.5      0.5        2.02           0.0   \n",
+       "2             1          5.1    3.5      0.5        2.00           0.0   \n",
+       "3             2          7.2    1.0      0.5        0.00           0.0   \n",
+       "4             2          5.8    1.0      0.5        0.00           0.0   \n",
+       "\n",
+       "   improvement_surcharge  total_amount  congestion_surcharge  Airport_fee  \\\n",
+       "0                    1.0         18.00                   2.5          0.0   \n",
+       "1                    1.0         12.12                   2.5          0.0   \n",
+       "2                    1.0         12.10                   2.5          0.0   \n",
+       "3                    1.0          9.70                   0.0          0.0   \n",
+       "4                    1.0          8.30                   0.0          0.0   \n",
+       "\n",
+       "   cbd_congestion_fee  \n",
+       "0                 0.0  \n",
+       "1                 0.0  \n",
+       "2                 0.0  \n",
+       "3                 0.0  \n",
+       "4                 0.0  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taxi_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0f029cd8-7f97-4cdf-be14-0caa750f3cb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3475226, 20)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taxi_df.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a04e4d1b-d3c7-4efb-aa1a-fc7b6a379a3f",
+   "id": "520f16df-f776-493c-a538-a57b9758d1d1",
    "metadata": {},
    "outputs": [],
    "source": []
